--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@nebular/security": "4.1.2",
     "@nebular/theme": "4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ngrx/store": "^8.0.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^10.0.0",
@@ -84,8 +86,7 @@
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
-    "zone.js": "~0.9.1",
-    "@ngrx/store": "^8.0.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-builders/jest": "^8.3.0",
