--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nebular/theme": "4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ngrx/effects": "^8.6.0",
+    "@ngrx/schematics": "^10.1.0",
     "@ngrx/store": "^8.0.0",
     "@ngrx/store-devtools": "^8.6.0",
     "@ngx-translate/core": "^11.0.1",
