--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "@nebular/security": "4.1.2",
     "@nebular/theme": "4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "@ngrx/effects": "^8.6.0",
-    "@ngrx/schematics": "^10.1.0",
-    "@ngrx/store": "^8.0.0",
-    "@ngrx/store-devtools": "^8.6.0",
+    "@ngrx/effects": "8.6.0",
+    "@ngrx/schematics": "8.6.0",
+    "@ngrx/store": "8.6.0",
+    "@ngrx/store-devtools": "8.6.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^10.0.0",
